--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "next": "12.2.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "supabase": "^1.3.0",
+    "tesseract.js": "^3.0.2"
   },
   "devDependencies": {
     "eslint": "8.23.0",
